Improve caching policy for GitHub action.
We generate unique cache key for each day and run scheduled job every day on main branch. In this way relatively fresh cache should ba always available for jobs triggered by PRs.

Cache takes about 4 MB and is deleted after one week, so this approach should not reserve too much space.

--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -3,7 +3,7 @@ name: Update translations
 on:
   pull_request:
   schedule:
-    - cron: '30 8 * * *'
+    - cron: '1 0 * * *'
 
 jobs:
   build:
@@ -18,12 +18,15 @@ jobs:
         with:
           php-version: '7.3'
 
+      - name: Get current time for cache
+        run: echo "DATE=$(date "+%F")" >> $GITHUB_ENV
+
       - name: Cache builder
         id: builder-cache
         uses: actions/cache@v2
         with:
           path: builder
-          key: ${{ runner.os }}-builder-
+          key: ${{ runner.os }}-builder-${{ env.DATE }}
           restore-keys: |
             ${{ runner.os }}-builder-
 
